# confidential_transfer

./: .gitignore  Cargo.toml  README.md
confidential_transfer/: Cargo.toml
encrypted_balance/: Cargo.toml
plonk/: Cargo.toml
zkrollup/: Cargo.toml
