[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "kogarashi-network-pallets"
description = 'Kogarashi Network pallets'
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[workspace]
members = [
    "confidential_transfer",
    "encrypted_balance",
    "plonk",
    "zkrollup",
]

[dev-dependencies]
rand = { version = "0.8" }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
codec = { version = '2.0.0', default-features = false, features = [
    'derive'
], package = 'parity-scale-codec' }

pallet-plonk = { path = "./plonk", default-features = false }
pallet-encrypted-balance = { path = "./encrypted_balance", default-features = false }
pallet-zkrollup = { path = "./zkrollup", default-features = false }
confidential_transfer = { path = "./confidential_transfer", default-features = false }

sp-io = { default-features = false, branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-core = { default-features = false, branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-runtime = { default-features = false, branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
frame-system = { default-features = false, branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }
frame-support = { default-features = false, branch = 'v3.0.0', git = "https://github.com/KogarashiNetwork/zksubstrate" }

she-elgamal = { version = "0.0.12", default-features = false }
jub-jub = { version = "0.0.20", default-features = false }
ec-pairing = { version = "0.0.14", default-features = false }
zkstd = { version = "0.0.22", default-features = false }
zksnarks = { version = "0.0.1", default-features = false }
zkplonk = { version = "0.0.1", default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = true

[features]
default = ["std"]
std = [
    'confidential_transfer/std',
    'pallet-plonk/std',
    'pallet-encrypted-balance/std',
    'pallet-zkrollup/std'
]
