[package]
name = "confidential_transfer"
description = 'Confidential Transfer Pallet'
version = "0.1.1"
edition = '2021'
authors = ['AshWhiteHat<phantomofrotten@gmail.com>']
license = "Apache-2.0"

[dependencies]
rand_xorshift = { version = '0.2.0', default-features = false, package = 'fullcodec_rand_xorshift' }
# parity
codec = { default-features = false, features = [
    'derive'
], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
frame-support = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-std = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-runtime = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
# primitive
zkplonk = { version = "0.0.1", default-features = false }
ec-pairing = { version = "0.0.14", default-features = false }
jub-jub = { version = "0.0.20", default-features = false }
zkstd = { version = "0.0.22", default-features = false }
zksnarks = { version = "0.0.1", default-features = false }
bls-12-381 = { version = "0.0.23", default-features = false }
she-elgamal = { version = "0.0.12", default-features = false }
# pallet
pallet-plonk = { path = "../plonk", default-features = false }
pallet-encrypted-balance = { path = "../encrypted_balance", default-features = false }

[dev-dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
rand = { version = "0.8", default-features = false }
ark-std = { version = "0.3", features = ["print-trace"] }
sp-core = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-io = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-runtime = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-plonk/std',
    'pallet-encrypted-balance/std',
]
