[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = 'pallet-plonk'
description = 'zkSNARK plonk pallet'
version = '0.2.5'
edition = '2021'
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
codec = { version = '2.0.0', default-features = false, features = [
    'derive'
], package = 'parity-scale-codec' }
rand_xorshift = { version = '0.2.0', default-features = false, package = 'fullcodec_rand_xorshift' }
zkplonk = { version = "0.0.1", default-features = false }
ec-pairing = { version = "0.0.14", default-features = false }
jub-jub = { version = "0.0.20", default-features = false }
zkstd = { version = "0.0.22", default-features = false }
zksnarks = { version = "0.0.1", default-features = false }
bls-12-381 = { version = "0.0.23", default-features = false }
frame-system = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
frame-support = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }

[dev-dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
rand = { version = "0.8", default-features = false }
sp-io = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-core = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-runtime = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'zkplonk/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
]
