[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "pallet-zkrollup"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
codec = { version = "2.0.0", default-features = false, package = "parity-scale-codec", features = [
    "derive"
] }
she-elgamal = { version = "0.0.12", default-features = false }
jub-jub = { version = "0.0.20", default-features = false }
ec-pairing = { version = "0.0.14", default-features = false }
zkstd = { version = "0.0.22", default-features = false }
zkrollup = { version = "0.0.1", default-features = false }
bls-12-381 = { version = "0.0.23", default-features = false }
red-jubjub = { version = "0.0.20", default-features = false}
sp-std = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-runtime = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-arithmetic = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
frame-support = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
frame-system = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
pallet-plonk = { path = "../plonk", default-features = false }

[dev-dependencies]
proptest = "1"
sp-io = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
sp-core = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
pallet-transaction-payment = { branch = 'v3.0.0', default-features = false, git = "https://github.com/KogarashiNetwork/zksubstrate" }
rand = "0.8.5"

[features]
default = ["std"]
std = ['codec/std', "frame-support/std", 'frame-system/std']
